refactor: todo 주석 제거